# rag-app

./: .gitignore  .pre-commit-config.yaml  Changelog.md  README.md  docker-compose.yml  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/api-gateway/: Dockerfile  devcontainer.json
.devcontainer/base/: Dockerfile  devcontainer.json
.devcontainer/context-retriever/: Dockerfile  devcontainer.json
.devcontainer/core-service/: devcontainer.json
.devcontainer/embedder-service/: devcontainer.json
.devcontainer/ingestion-service/: devcontainer.json
.devcontainer/llm-proxy/: Dockerfile  devcontainer.json
.devcontainer/res/: .bash_aliases  .bashrc  post_create_command.bash
.devcontainer/scripts/: base-setup.sh
.devcontainer/web-app/: Dockerfile  devcontainer.json
.github/workflows/: service-checks.yml
doc/: architecture.md
services/api-gateway/: Dockerfile
services/context-retriever/: .gitignore  context-retriever.Dockerfile  justfile  main.py  pyproject.toml
services/context-retriever/cfg/: main.yaml
services/context-retriever/cfg/vector_store/: qdrant.yaml
services/context-retriever/src/context_retriever/: doc_preparation_service.py  doc_retrieval_service.py
services/context-retriever/src/context_retriever/vector_store/: core.py  qdrant.py
services/core-service/: Dockerfile
services/embedder-service/: Dockerfile
services/embedding-endpoint/: embedding-endpoint.Dockerfile  entrypoint.sh
services/ingestion-service/: Dockerfile
services/llm-proxy/: .gitignore  Dockerfile  justfile  llm-proxy.Dockerfile  main.py  pyproject.toml
services/llm-proxy/app/: main.py
services/llm-proxy/cfg/: main-dev.yaml  main.yaml
services/llm-proxy/guardrails_cfg/: actions.py  config.yml  prompts.yml
services/llm-proxy/guardrails_cfg/rails/: chat_conversation_check.co
services/llm-proxy/src/llm_proxy/: chat_llm_service.py  guardrails_service.py  llm_actions.py
services/llm-proxy/src/llm_proxy/rails/: core.py  rails.py
services/vector-store-service/: .gitignore  Dockerfile  pyproject.toml
services/vector-store-service/src/vector_store_service/: __init__.py  __main__.py  app.py  embeddings.py  main.py  schemas.py  settings.py  vector_store.py
services/vector-store-service/tests/: conftest.py  test_app.py  test_settings.py  test_vector_store.py
services/web-app/: .gitignore  justfile  main.py  main_dev.py  mock_backend.py  pyproject.toml  web-app.Dockerfile  web.Dockerfile
services/web-app/cfg/: main.yaml  main_dev.yaml  mock_backend.yaml
services/web-app/src/web/: backend_communication.py  gui.py
services/web-app/src/web_app/: __init__.py  backend_communication.py  gui.py
services/web-app/src/web_app/backend/: context_retriever.py  llm_proxy.py  utils.py
services/web-app/src/web_app/gui/: main_controller.py  utils.py
tests/: test_backend.py
(+10 files in other folders)
