[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context_retriever"
version = "0.1.0"
requires-python=">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "requests>=2.32.3",
    "uvicorn>=0.38.0",
    "fastapi>=0.124.4",
    "langchain>=1.2.0",
    "langchain-core>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "python-multipart>=0.0.21",
    "pypdf>=6.5.0",
    "qdrant-client>=1.16.2"
]

[project.optional-dependencies]
dev = [
    "pylint>=4.0.4",
    "autopep8>=2.3.2",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0"
]
