[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_proxy"
version = "0.1.0"
requires-python=">=3.12"
dependencies = [
    "hydra-core==1.3.2",
    "requests==2.32.3",
    "uvicorn==0.38.0",
    "fastapi==0.124.4",
    "nemoguardrails==0.19.0",
    "ollama==0.6.1"
]

[project.optional-dependencies]
dev = [
    "pylint>=4.0.4",
    "autopep8>=2.3.2",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0"
]
